ensure code areas are visible on small screens

--- a/scripts/templates/ppp/static/styles.css
+++ b/scripts/templates/ppp/static/styles.css
@@ -18,3 +18,8 @@ video {
   /* copied from the <thead> so that the background shows up when scrolling */
   background-color: var(--color);
 }
+
+.CodeMirror {
+  /* ensure code areas are visible on narrow screens */
+  overflow-x: scroll;
+}
